--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,3 +10,20 @@ jobs:
         continue-on-error : true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+  OWASP-ZAP SCAN:
+    runs-on: ubuntu-latest
+    name: Scan the web application with ZAP
+    steps:
+      - name: Checkout
+        uses: actions/Checkout@v2
+        with:
+          ref: master
+      - name: ZAP Scan
+        uses: zaproxy/action-full-scan@v0.3.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'owasp/zap2docker-stable'
+          target: 'https://www.zaproxy.org'
+          rules_file_name": '.zap/rules/tsv'
+          cmd_options: '-a'
