--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-  OWASP-ZAP SCAN:
+  OWASP_ZAP SCAN:
     runs-on: ubuntu-latest
     name: Scan the web application with ZAP
     steps:
