--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         uses: zaproxy/action-full-scan@v0.3.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: 'owasp/zap2docker-stable'
+          docker_name: 'securecodebox/scanner-zap-extended'
           target: 'https://www.zaproxy.org'
           rules_file_name": '.zap/rules/tsv'
           cmd_options: '-a'
