--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,19 +11,19 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-  OWASP_ZAP_SCAN:
+    zap_scan:
     runs-on: ubuntu-latest
-    name: Scan the web application with ZAP
+    name: Scan the webapplication
     steps:
       - name: Checkout
-        uses: actions/Checkout@v2
+        uses: actions/checkout@v2
         with:
           ref: master
       - name: ZAP Scan
-        uses: zaproxy/action-full-scan@v0.3.0
+        uses: zaproxy/action-baseline@v0.12.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://www.zaproxy.org'
-          rules_file_name": '.zap/rules/tsv'
+          rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
