--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
                   </execution>
                 </executions>
               </plugin>
+                 <plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>sonar-maven-plugin</artifactId>
+    <version>3.0.2</version>
+</plugin>
+
        </plugins>
        <finalName>springboot-images-new</finalName>
        </build>
