--- a/pom.xml
+++ b/pom.xml
@@ -29,44 +29,18 @@
     <scope>test</scope>
 </dependency>
     </dependencies>
-
          <build>
-        <plugins>
-
-<!--#Change 2 - Changes for Unit Test Coverage Percentage Update on SonarCloud Dashboard
-#By ASecurityGuru
-#5/11/2022 11:14 AM IST
-#Default Location of CodeCoverage File is target/site/jacoco/jacoco.xml,target/site/jacoco-it/jacoco.xml,build/reports/jacoco/test/jacocoTestReport.xml
--->
-            <plugin>
-                <groupId>org.jacoco</groupId>
-               <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.7</version>
-                <executions>
-                  <execution>
-                    <id>prepare-agent</id>
-                    <goals>
-                      <goal>prepare-agent</goal>
-                    </goals>
-                  </execution>
-                  <execution>
-                    <id>report</id>
-                    <goals>
-                      <goal>report</goal>
-                    </goals>
-                    <configuration>
-                      <formats>
-                        <format>XML</format>
-                      </formats>
-                    </configuration>
-                  </execution>
-                </executions>
-              </plugin>
-                 <plugin>
-    <groupId>org.codehaus.mojo</groupId>
-    <artifactId>sonar-maven-plugin</artifactId>
-    <version>3.0.2</version>
-</plugin>
+  <pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.sonar</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>2.5</version>
+      </plugin>
+    </plugins>
+  </pluginManagement>
+</build>
+</dependency>
 
        </plugins>
        <finalName>springboot-images-new</finalName>
