--- a/.github/workflows/devsec.yaml
+++ b/.github/workflows/devsec.yaml
@@ -18,7 +18,7 @@ jobs:
           cache: maven
 
       - name: Build with Maven and analyze with SonarQube
-        run: mvn -B verify sonar:sonar -Dsonar.projectKey=javasonartest -Dsonar.organization=javasonartest -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
+        run:  mvn -B verify sonar:sonar -Dsonar.projectKey=sonardemotesting -Dsonar.organization=sonardemotesting -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -50,7 +50,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-1
+          aws-region: us-west-2
 
       - name: Login to Amazon ECR
         id: login-ecr
