--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <version>0.8.4</version>
                 </plugin>
+                 <plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>sonar-maven-plugin</artifactId>
+    <version>3.0.2</version>
+</plugin>
             </plugins>
         </pluginManagement>
     </build>
