--- a/.github/workflows/devsec.yaml
+++ b/.github/workflows/devsec.yaml
@@ -59,7 +59,7 @@ jobs:
       - name: Build, tag, and push Docker image to Amazon ECR
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: java-app-01
+          REPOSITORY: devsecops
           IMAGE_TAG: 1.0.0
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
@@ -81,7 +81,7 @@ jobs:
         uses: alexjurkiewicz/ecr-scan-image@v1.7.1
         continue-on-error: true
         with:
-          repository: java-app-01
+          repository: devsecops
           tag: 1.0.0
       - run: echo "${{ steps.docker-scan.outputs.total }} total vulnerabilities."
 
@@ -103,7 +103,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-1
+          aws-region: us-west-2
         env:
           KUBECONFIG: ${{secrets.KUBE_CONFIG}}  
 
