--- a/.github/workflows/devsec.yaml
+++ b/.github/workflows/devsec.yaml
@@ -65,7 +65,7 @@ jobs:
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker build -t $REGISTRY/$REPOSITORY:latest .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
-          docker push -t $REGISTRY/$REPOSITORY:latest .
+          docker push $REGISTRY/$REPOSITORY:latest .
 
       - name: Login to GitHub Packages
         uses: docker/login-action@v1  # Updated to use Docker's official login-action
