--- a/.github/workflows/devsec.yaml
+++ b/.github/workflows/devsec.yaml
@@ -130,9 +130,10 @@ jobs:
           ref: main
 
       - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.7.0
+        uses: zaproxy/action-baseline@v0.12.0
         with:
-          docker_name: 'owasp/zap2docker-stable'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://devopsautomation-with-rahulsharan.link'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
