--- a/.github/workflows/devsec.yaml
+++ b/.github/workflows/devsec.yaml
@@ -133,7 +133,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.12.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: '767397705569.dkr.ecr.us-west-2.amazonaws.com/devsecops:1.0.0'
+          #docker_name: '767397705569.dkr.ecr.us-west-2.amazonaws.com/devsecops:1.0.0'
           target: 'https://devopsautomation-with-rahulsharan.link'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
