--- a/.github/workflows/devsec.yaml
+++ b/.github/workflows/devsec.yaml
@@ -82,6 +82,7 @@ jobs:
         uses: alexjurkiewicz/ecr-scan-image@v1.7.1
         continue-on-error: true
         with:
+          aws-region: us-west-2
           repository: devsecops
           tag: 1.0.0
       - run: echo "${{ steps.docker-scan.outputs.total }} total vulnerabilities."
