--- a/.github/workflows/devsec.yaml
+++ b/.github/workflows/devsec.yaml
@@ -121,18 +121,18 @@ jobs:
           kubectl apply -f service.yaml
       
   zap_scan:
-    needs: Image-Deploy-to-EKS
     runs-on: ubuntu-latest
-    name: Scan the web application with ZAP
+    name: Scan the webapplication
     steps:
-      #- name: Checkout code
-        #uses: actions/checkout@v2
-        #with:
-          #ref: main
-
-      - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.6.1
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
-          docker_name: 'zaproxy/action-baseline@v0.12.0'
+          ref: master
+      - name: ZAP Scan
+        uses: zaproxy/action-full-scan@v0.10.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'http://testphp.vulnweb.com/'
+          rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
