--- a/.github/workflows/owasp.yaml
+++ b/.github/workflows/owasp.yaml
@@ -71,7 +71,7 @@ jobs:
         uses: aquasecurity/trivy-action@0.20.0
         with:
           image-ref: '767397705569.dkr.ecr.us-west-2.amazonaws.com/devsecops:1.0.0'
-          format: 'sarif'
+          format: 'table'
           output: 'trivy-results.sarif'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
