--- a/.github/workflows/owasp.yaml
+++ b/.github/workflows/owasp.yaml
@@ -71,8 +71,9 @@ jobs:
         uses: aquasecurity/trivy-action@0.20.0
         with:
           image-ref: '767397705569.dkr.ecr.us-west-2.amazonaws.com/devsecops:1.0.0'
-          format: 'table'
+          format: 'sarif'
           output: 'trivy-results.sarif'
+          severity: 'HIGH,CRITICAL'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -82,6 +83,17 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: 'trivy-results.sarif'
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: '767397705569.dkr.ecr.us-west-2.amazonaws.com/devsecops:1.0.0'
+          format: 'table'
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-west-2
           
           
       
