--- a/.github/workflows/imagescantrivy.yaml
+++ b/.github/workflows/imagescantrivy.yaml
@@ -25,6 +25,7 @@ jobs:
           
       - name: Run Snyk to check Docker image for vulnerabilities
         uses: snyk/actions/docker@master
+        continue-on-error: true 
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
