--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -13,7 +13,7 @@ jobs:
         with:
           scan-type: 'config'
           format: 'table'
-          exit-code: '1'
+          #exit-code: '1'
           ignore-unfixed: true
           severity: 'CRITICAL,HIGH'
 
