--- a/.github/workflows/dependencycheck.yaml
+++ b/.github/workflows/dependencycheck.yaml
@@ -16,7 +16,7 @@ jobs:
           rm -rf dependency-check*
 
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@master
         with:
           name: artifacts
           path: report.html
