--- a/.github/workflows/owasp.yaml
+++ b/.github/workflows/owasp.yaml
@@ -109,7 +109,7 @@ jobs:
 
      # Upload Artifacts
      - name: Upload the scan output
-       uses: actions/upload-artifact@v2
+       uses: actions/upload-artifact@master
        with:
          name: scan_results
          path: /tmp/scan_output.json
