--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -41,6 +41,9 @@ jobs:
         with:
           #args: --severity-threshold=high
           args: --sarif-file-output=snyk.sarif
+          scan-type: 'fs'
+          ignore-unfixed: true
+          format: 'table'
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v2
         with:
