--- a/.github/workflows/imagescantrivy.yaml
+++ b/.github/workflows/imagescantrivy.yaml
@@ -49,5 +49,5 @@ jobs:
         uses: alexjurkiewicz/ecr-scan-image@v3.0.0
         with:
           repository: devsecops
-          tag: v1.0.0
+          tag: 1.0.0
           fail_threshold: high
