--- a/.github/workflows/imagescantrivy.yaml
+++ b/.github/workflows/imagescantrivy.yaml
@@ -44,10 +44,39 @@ jobs:
         run: |
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
+  
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-west-2
+      - name: Build & Push Docker image
+        id: docker-build
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: devsecops
+          # Use the git tag as the image tag.
+          # github.ref format is like `refs/tags/v0.0.1`, so we strip the the
+          # `refs/tags/` prefix and export this for later use.
+          IMAGE_TAG: ${{ github.ref }}
+        run: |
+          tag=${IMAGE_TAG##refs/tags/}
+          echo "Tag is $tag"
+          echo "::set-output name=tag::$tag"
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$tag .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$tag
       - name: Scan Docker image
         id: docker-scan
-        uses: alexjurkiewicz/ecr-scan-image@v3.0.0
+        uses: alexjurkiewicz/ecr-scan-image@v1.7.1
         with:
           repository: devsecops
-          tag: 1.0.0
-          fail_threshold: high
+          tag: ${{ steps.docker-build.outputs.tag }}
+          # fail_threshold: medium
+          # ignore_list: |
+          #   CVE-2014-7654321
+          #   CVE-2014-456132
+      # Access scan results in later steps
+      - run: echo "${{ steps.docker-scan.outputs.total }} total vulnerabilities."
+
+      
